[gd_scene load_steps=3 format=2]

[ext_resource path="res://Code/Exit-Button.gd" type="Script" id=1]
[ext_resource path="res://Art/UI/Exit.png" type="Texture" id=2]

[node name="Exit-Button" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Button Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="Button Sprite"]
margin_left = -162.0
margin_top = -43.0
margin_right = 150.0
margin_bottom = 57.0
flat = true
[connection signal="mouse_entered" from="Button Sprite/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button Sprite/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button Sprite/Button" to="." method="_on_Button_pressed"]
